--- a/jade/index.pug
+++ b/jade/index.pug
@@ -1,9 +1,10 @@
-//- pug -w C:/proyectos/paginaWeb/jade -o C:/proyectos/paginaWeb/html
+//- pug -w C:/proyectos/paginaWeb/jade -o C:/proyectos/paginaWeb/html -P
 html(lang="en")
     head
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Document
+        link(rel="stylesheet", href="../css/index.css")
+        title Dental Salazar
     body
         nav 
           ul 
