--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,6 +1,12 @@
 //- sass --watch ./:../css
-li
-    background: #849a9a
+$font-family-text: Rockwell, Arial, Helvetica, Sans-serif
+$primary: #849a9a
+
+
+html
+    font-family: $font-family-text
+nav
     ul
-        display: box
-        
+    background: $primary
+    display: box
+    margin: 0
