--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,34 @@
-html {
-  font-family: Rockwell, Arial, Helvetica, Sans-serif; }
+* {
+  font-family: Rockwell, Arial, Helvetica, Sans-serif;
+  padding: 0;
+  margin: 0; }
 
 nav {
-  background: #849a9a;
   display: box;
-  margin: 0; }
+  background: #3d3d3d;
+  text-transform: uppercase; }
+  nav ul {
+    color: #fff;
+    display: box;
+    letter-spacing: 15px;
+    padding: 30px;
+    list-style: none;
+    position: relative;
+    left: 50px; }
+    nav ul div {
+      background: #fff;
+      width: 30%;
+      height: 5px;
+      position: relative;
+      display: block; }
+    nav ul li.start {
+      position: relative;
+      left: -50px;
+      padding: 10px; }
+  nav .circle {
+    padding: 5%;
+    border: 1px #fff solid;
+    background: #ccc;
+    display: block; }
 
 /*# sourceMappingURL=index.css.map */
