--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,12 +1,3 @@
 //- sass --watch ./:../css
-$font-family-text: Rockwell, Arial, Helvetica, Sans-serif
-$primary: #849a9a
-
-
-html
-    font-family: $font-family-text
-nav
-    ul
-    background: $primary
-    display: box
-    margin: 0
+@import general
+@import nav
