--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -1,23 +1,75 @@
-//- sass --watch ./:../css
-nav
+//  sass --watch /proyectos/paginaWeb/sass:C:/proyectos/paginaWeb/css
+nav 
+    
     display: box
     background: $grey
     text-transform: uppercase
-    ul 
+    a 
+        text-decoration: none
         color: $w
-        display: box
+    a:visited
+        text-decoration: none
+        color: $w
+    a:hover 
+        color: $w
+        text-decoration: underline
+    ul
+        color: $w
         letter-spacing: $letter
-        padding: 30px
-        list-style: none
-        position: relative
+        padding: 10px 0px
+        list-style: none    
+        position: relative  
         left: 50px
-        @include line (30%)   
+        li
+            padding: 2px 0px         
         li.start
+        
             position: relative
-            left: -50px 
-            padding: 10px
-    .circle
-        padding: 5%
-        border: 1px $w solid
-        background: #ccc
-        display: block
+            // left: -20px 
+        
+    .line
+        @include line (40%)  
+    // Button 
+.circle
+    // Size
+    height: 20px
+    width: 20px
+    padding: 30px
+
+    border: 3px $w solid
+    border-radius: 50%
+
+    // margin: 3px
+    // background: #fff
+    // Position
+    position: fixed
+
+    justify-content: center
+    
+    left: 90%   
+    top: 20px
+
+
+    .c2
+        // Size
+        height: 60px
+        width: 60px
+        position: absolute
+        border-radius: 50%
+
+        border: 3px $w solid 
+
+        // Position
+        left: 7px
+        top: 7px
+        
+
+    // .cross
+        // @include line (16px)  
+                // 
+    // a 
+        // color: $w
+        // text-decoration: none
+    // a:hover
+        // text-decoration: underline
+    // 
