--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -1,19 +1,25 @@
-//- sass --watch ./:../css
-$font-family-text: Rockwell, Arial, Helvetica, Sans-serif
+// sass --watch /proyectos/paginaWeb/sass:C:/proyectos/paginaWeb/css
+
+$font-family-text:  Roboto, Rockwell, Arial, Helvetica, Sans-serif
+$font-family-tittle: 'Berlin Sans FB', Arial, Helvetica, Sans-serif
 $primary: #849a9a
 $grey: #3d3d3d
 $w:#fff
-$letter: 15px
-@mixin line ($width)
-    div
-        background: $w
-        width: $width
-        height: 5px
-        position: relative
-        display: block
-    
+$letter: 10px
+
 *
     font-family: $font-family-text
-    padding: 0
+    padding: 0 
     margin: 0
+
+@mixin line ($width)
+        background: $w
+        height: 3px
+        width: $width   
+        // position: relative
+        // display: block
+        margin: 5px 0px
+        // max-width: 400px
+        // min-width: 50px
+    
     
